fix the code render in dark mode
need to disable karmdown, confused the reason

--- a/_sass/dark.scss
+++ b/_sass/dark.scss
@@ -269,5 +269,8 @@
 
 .dark code, tt {
   color: #DC143C;
-  background-color: #444;
+  background-color: #272727;
+}
+.dark pre>code {
+  background: transparent;
 }
